# neuralnet-rs

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: data.rs  main.rs  network.rs
