[package]
name = "neuralnet"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.13.3"
dotenvy = "0.15.7"
env_logger = "0.11.3"
itertools = "0.13.0"
log = { version = "0.4.21", features = ["std"] }
nalgebra = { version = "0.32.5", features = ["serde-serialize"]}
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
